[tool.poetry]
name = "eco_explore_grpc"
version = "0.1"
description = "GRPC for coments"
authors = ["Obet3000 <zs20015717@estudiantes.uv.mx>"]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.25.1"
pymongo = "^4.6.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
